--- a/assests/style.css
+++ b/assests/style.css
@@ -4,44 +4,78 @@
 }
 body {
   overflow-x: hidden;
-  background-color: #00aff0;
-}
-
-head {
+  background-image: linear-gradient(green, rgb(91, 193, 91));
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-h1 {
-  text-align: center;
+li {
+  list-style: none;
+  font-weight: bolder;
+}
+img {
+  width: 100%;
+}
 
-  background-image: linear-gradient(rgb(69, 107, 245), rgb(0, 30, 138));
-  color: azure;
+.location {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10%;
+}
+
+#name {
+  font-size: 2.75rem;
+  font-weight: bolder;
+}
+.fa-location-dot {
+  font-size: 2.5rem;
+}
+#icons {
+  border-left: rgb(13, 13, 13) solid 2px;
+  width: 100%;
+}
+
+.temp {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 30%;
+  font-size: 1.75rem;
+}
+
+#description {
+  font-size: 1rem;
+  font-weight: lighter;
+}
+
+.present-forecast {
+  align-items: center;
+  margin: auto;
+  width: 70vw;
+  height: 50vh;
 }
 
 .search-container {
-  padding: 12px;
+  width: 70vw;
+  padding: 2px;
   border-radius: 5px;
   text-align: center;
   border-radius: 15px;
   box-shadow: 5px 15px 20px 15px rgba(0, 0, 0, 0.634);
   z-index: 10%;
-  background-color: #13131306;
+  background-color: #ffffff79;
 }
 
 #search {
-  width: 45%;
   border-radius: inherit;
-  font-size: 1.5em;
-  width: 90%;
+  border: 1px solid white;
+  width: 70%;
   font-style: oblique;
   color: white;
   outline: none;
   font-size: 1em;
   font-weight: bolder;
-  padding: 7px 8px;
-  border: none;
+  padding: 7px;
   background-color: transparent;
 }
 
@@ -51,40 +85,58 @@ h1 {
 
 #searchBtn {
   border: none;
-  background-color: inherit;
+  background-color: transparent;
   color: white;
   width: 7vw;
   height: 7vh;
   cursor: pointer;
 }
 
-.present-forecast {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  margin-top: 2vh;
-  margin-left: 25vw;
-  width: 70vw;
-  height: 50vh;
-  border: solid grey 5px;
+.dNt {
+  display: grid;
+  place-content: center;
+  align-items: center;
+  grid-template-columns: repeat(2, 2fr);
+  font-size: 0.75rem;
 }
 
-li {
-  list-style: none;
-  font-weight: bolder;
+.fa-wind {
+  color: azure;
+}
+.fa-droplet {
+  color: blue;
+}
+
+#time {
+  font-weight: 100;
+}
+#date {
+  font-weight: 100;
+}
+
+.mainUl {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  justify-content: space-around;
+  flex-direction: row;
 }
 
 .forecast {
   display: flex;
   justify-content: space-around;
+  height: 40%;
+  width: 90%;
   margin: 3.5%;
   color: white;
   gap: 20px;
 }
 
 .next-forecast {
-  height: 50vh;
-  width: 80vw;
+  width: 100%;
+  height: 80%;
+  border-radius: 10%;
   color: white;
-  background-color: rgb(0, 30, 138);
+  background-color: #ffffff79;
+  box-shadow: 5px 15px 20px 15px rgba(0, 0, 0, 0.634);
 }
