--- a/assests/style.css
+++ b/assests/style.css
@@ -4,15 +4,19 @@
 }
 body {
   overflow-x: hidden;
-  background-image: linear-gradient(green, rgb(91, 193, 91));
+  background-image: linear-gradient(#616161, black);
   display: flex;
   flex-direction: column;
   justify-content: center;
+  font-family: "Nunito", sans-serif;
   align-items: center;
+  color: white;
 }
 li {
   list-style: none;
   font-weight: bolder;
+}
+button {
 }
 img {
   width: 100%;
@@ -25,7 +29,7 @@ img {
 }
 
 #name {
-  font-size: 2.75rem;
+  font-size: 2.5rem;
   font-weight: bolder;
 }
 .fa-location-dot {
@@ -40,7 +44,7 @@ img {
   display: flex;
   flex-direction: row;
   margin-bottom: 30%;
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 
 #description {
@@ -130,6 +134,9 @@ img {
   margin: 3.5%;
   color: white;
   gap: 20px;
+}
+
+#description {
 }
 
 .next-forecast {
