--- a/assests/style.css
+++ b/assests/style.css
@@ -5,6 +5,8 @@
 body {
   overflow-x: hidden;
   background-image: linear-gradient(#616161, black);
+
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -45,6 +47,7 @@ img {
   flex-direction: row;
   margin-bottom: 30%;
   font-size: 1.5rem;
+  text-shadow: 0px 0px 20px black, 0px 0px 5px white;
 }
 
 #description {
@@ -65,9 +68,9 @@ img {
   border-radius: 5px;
   text-align: center;
   border-radius: 15px;
-  box-shadow: 5px 15px 20px 15px rgba(0, 0, 0, 0.634);
+  box-shadow: 5px 15px 20px 15px rgba(0, 0, 0, 0.634), 0px 0px 40px white;
   z-index: 10%;
-  background-color: #ffffff79;
+  background-color: #35333379;
 }
 
 #search {
@@ -125,6 +128,11 @@ img {
   justify-content: space-around;
   flex-direction: row;
 }
+.mainLi {
+  padding: 10px;
+  border-left: rgb(102, 101, 101) solid 2px;
+  border-right: rgb(102, 101, 101) solid 2px;
+}
 
 .forecast {
   display: flex;
@@ -144,6 +152,6 @@ img {
   height: 80%;
   border-radius: 10%;
   color: white;
-  background-color: #ffffff79;
+  background-color: #35333379;
   box-shadow: 5px 15px 20px 15px rgba(0, 0, 0, 0.634);
 }
