--- a/assests/style.css
+++ b/assests/style.css
@@ -56,6 +56,7 @@ header {
 #description {
   font-size: 2rem;
   font-weight: lighter;
+  white-space: nowrap;
 }
 
 .present-forecast {
@@ -66,6 +67,7 @@ header {
 }
 
 .search-container {
+  margin-top: 50px;
   padding-top: 10px;
   width: 100%;
   height: 38%;
@@ -108,7 +110,8 @@ header {
   place-content: center;
   align-items: center;
   grid-template-columns: repeat(2, 2fr);
-  font-size: 0.75rem;
+  font-size: 1.75rem;
+  margin-top: 20%;
 }
 
 .fa-wind {
@@ -142,16 +145,15 @@ header {
 .forecast {
   display: flex;
   justify-content: space-around;
-  height: 40%;
-  width: 90%;
-  margin: 3.5%;
+  height: 70%;
+  width: 100vw;
   color: white;
   gap: 20px;
 }
 
 .next-forecast {
-  width: 100%;
-  height: 80%;
+  height: 70%;
+  width: 70%;
   border-radius: 10%;
   color: white;
   background-color: #35333379;
