--- a/assests/style.css
+++ b/assests/style.css
@@ -153,9 +153,11 @@ header {
 }
 
 .next-forecast {
+  display: flex;
+  flex-direction: column;
   align-items: center;
-  height: 60%;
-  width: 65%;
+  height: 80%;
+  width: 30%;
   border-radius: 10%;
   color: white;
   background-color: #35333379;
