--- a/assests/style.css
+++ b/assests/style.css
@@ -49,7 +49,7 @@ header {
   grid-template-columns: repeat(2, 1fr);
   place-items: center;
   align-items: center;
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-shadow: 0px 0px 20px black, 0px 0px 5px white;
 }
 
@@ -67,10 +67,9 @@ header {
 }
 
 .search-container {
-  margin-top: 50px;
-  padding-top: 10px;
+  margin-top: 5px;
   width: 100%;
-  height: 38%;
+  height: 45%;
   border-radius: inherit;
   text-align: center;
   border-radius: 15px;
@@ -110,8 +109,7 @@ header {
   place-content: center;
   align-items: center;
   grid-template-columns: repeat(2, 2fr);
-  font-size: 1.75rem;
-  margin-top: 20%;
+  font-size: 1.5rem;
 }
 
 .fa-wind {
@@ -162,6 +160,7 @@ header {
   color: white;
   background-color: #35333379;
   box-shadow: 5px 15px 20px 15px rgba(0, 0, 0, 0.634), 0px 0px 40px white;
+  margin-bottom: 30vh;
 }
 @media only screen and (max-width: 725px) {
   /*Small smartphones [325px -> 425px]*/
